--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,9 @@
-@import url('light-mode.css');
-@import url('dark-mode.css');
+@import url('theme.css');
 @import url('components/switch.css');
+@import url('components/alert.css');
 @import url('header.css');
 @import url('content.css');
+@import url('footer.css');
 
 * {
   margin: 0;
@@ -17,12 +18,40 @@
 body {
   line-height: 1;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 560px;
-  height: auto;
+  width: 600px;
+  background-color: var(--background);
+  color: var(--foreground);
+  font-size: 14px;
 }
+
+a {
+  color: var(--primary);
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+strong {
+  font-weight: bold;
+}
+
+aside {
+  padding: 5px;
+  width: 100%;
+  border-bottom: 1px solid var(--muted);
+}
+
+.hidden {
+  display: none;
+}
+
+/* .scroll-container {
+  scrollbar-width: thin;
+  scrollbar-color: var(--muted) transparent;
+} */
