--- a/styles/components/switch.css
+++ b/styles/components/switch.css
@@ -18,13 +18,13 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--muted-foreground);
+  background-color: hsl(var(--muted-foreground));
   transition: 0.4s;
   border-radius: 10px;
 }
 
 input:checked + .slider {
-  background-color: var(--primary);
+  background-color: hsl(var(--primary));
 }
 
 .slider:before {
@@ -34,7 +34,7 @@ input:checked + .slider {
   width: 14px;
   left: 3px;
   bottom: 3px;
-  background-color: var(--foreground);
+  background-color: hsl(var(--foreground));
   transition: 0.4s;
   border-radius: 50%;
 }
