--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,7 @@
 @import url('theme.css');
+@import url('utils.css');
 @import url('components/switch.css');
 @import url('components/alert.css');
-@import url('header.css');
-@import url('content.css');
-@import url('footer.css');
 
 * {
   margin: 0;
@@ -22,13 +20,13 @@ body {
   flex-direction: column;
   align-items: center;
   width: 500px;
-  background-color: var(--background);
-  color: var(--foreground);
+  background-color: hsl(var(--background));
+  color: hsl(var(--foreground));
   font-size: 14px;
 }
 
 a {
-  color: var(--primary);
+  color: hsl(var(--primary));
   text-decoration: none;
   transition: 0.5s;
 }
@@ -41,17 +39,74 @@ strong {
   font-weight: bold;
 }
 
-aside {
-  padding: 5px;
+aside.status-container {
+  padding: 15px;
   width: 100%;
-  border-bottom: 1px solid var(--muted);
+  /* border-bottom: 1px solid hsl(var(--muted)); */
 }
 
-.hidden {
-  display: none;
+header {
+  display: block;
+  height: 65px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+  width: 100%;
+  border-bottom: 1px solid hsl(var(--muted));
 }
 
-/* .scroll-container {
-  scrollbar-width: thin;
-  scrollbar-color: var(--muted) transparent;
-} */
+header picture {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+header picture svg {
+  width: 32px;
+  height: 32px;
+  fill: hsl(var(--foreground));
+}
+
+main {
+  display: flex;
+  width: 100%;
+}
+
+.section-main-container {
+  width: 50%;
+}
+
+.section-main-container:last-child {
+  border-left: 1px solid hsl(var(--muted));
+}
+
+.section-main-container h3 {
+  position: sticky;
+  top: 0;
+  background-color: hsl(var(--background));
+  padding: 15px;
+  border-bottom: 1px solid hsl(var(--muted));
+}
+
+.section-main-container .content {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px;
+  overflow-y: auto;
+  max-height: 380px;
+  scrollbar-width: none;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  width: 100%;
+  border-top: 1px solid hsl(var(--muted));
+  color: hsl(var(--muted-foreground));
+  font-size: 12px;
+}
