feat: add toggle event for set styles preset

--- a/styles/components/alert.css
+++ b/styles/components/alert.css
@@ -1,6 +1,6 @@
 .alert {
+  margin: 15px;
   padding: 15px;
-  width: 100%;
   height: auto;
   position: relative;
   border-radius: var(--radius);
