--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 600px;
+  width: 560px;
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
   font-size: 14px;
@@ -70,45 +70,43 @@ header picture svg {
 
 main {
   display: flex;
+  justify-content: space-between;
   width: 100%;
 }
 
-.section-main-container {
-  width: 50%;
+#main-container > div:not(:last-child) {
+  width: 100%;
 }
 
-.section-main-container:not(:first-child) {
+#main-container > div:last-child {
+  width: 80%;
+}
+
+#main-container > div:not(:first-child) {
   border-left: 1px solid hsl(var(--muted));
 }
 
-.section-main-container .section-title {
+#main-container > div:first-child > section:first-child {
+  border-bottom: 1px solid hsl(var(--muted));
+}
+
+#main-container section {
+  display: flex;
+  flex-direction: column;
   padding: 15px;
+  gap: 15px;
+}
+
+#main-container section .section-title {
   font-size: 12px;
 }
 
-.section-main-container .content {
-  padding-bottom: 15px;
-}
-
-.section-main-container .content:not(:first-child) {
-  border-top: 1px solid hsl(var(--muted));
-}
-
-.section-main-container .content section {
+#main-container section div#section-fontSize {
   display: flex;
-  flex-direction: column;
-  padding: 0 15px;
-  gap: 5px;
 }
 
-.section-main-container .content section.section-group-grid {
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.section-main-container .content section .section-item {
+#main-container section > div .section-item {
   padding: 12px 10px;
-  border-radius: var(--radius);
   border: 1px solid hsl(var(--muted));
   transition: 0.5s;
   cursor: pointer;
@@ -116,19 +114,28 @@ main {
   position: relative;
 }
 
-.section-main-container .content section .section-item.active {
-  border-color: hsl(var(--primary));
-  color: hsl(var(--primary));
+#main-container section > div .section-item:not(:first-child) {
+  margin-top: -1px;
 }
 
-.section-main-container .content section.section-group-grid .section-item {
+#main-container section div#section-fontSize .section-item {
   text-align: center;
-  width: 53px;
+  width: 40px;
+  margin-top: 0;
+  transition: 0.5s;
 }
 
-.section-main-container .content .section-item:hover {
+#main-container section div#section-fontSize .section-item:not(:first-child) {
+  margin-left: -1px;
+}
+
+#main-container section > div .section-item.active {
+  background-color: hsla(var(--primary) / 8%);
   color: hsl(var(--primary));
-  border-color: hsl(var(--primary));
+}
+
+#main-container section > div .section-item:hover {
+  color: hsl(var(--primary));
 }
 
 footer {
