--- a/styles/main.css
+++ b/styles/main.css
@@ -139,6 +139,7 @@ main {
 
 footer {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 15px;
   width: 100%;
@@ -149,4 +150,5 @@ footer {
 
 .hidden {
   display: none !important;
+  align-items: center;
 }
